--- a/ks_toyota_gt86_SSC/data/car.ini
+++ b/ks_toyota_gt86_SSC/data/car.ini
@@ -1,3 +1,14 @@
+; =============================================================================
+; CAR PHYSICS DOCUMENTATION
+; =============================================================================
+; Parameter documentation sources:
+; - Assetto Corsa Physics Pipeline documentation
+; - OverTake.gg car.ini configuration threads
+; - Assetto Corsa Mods forum discussions
+; - Real-world Solo Spec Coupe correlation data
+; Documentation compiled December 2024
+; =============================================================================
+
 [HEADER]
 VERSION=v2022.12.03
 
@@ -5,46 +16,46 @@ VERSION=v2022.12.03
 SCREEN_NAME=Toyota GT86 SSC
 
 [BASIC]
-GRAPHICS_OFFSET=0,-0.475,-0.045		; 3 axis correction (x,y,z), applies only to the 3D object of the car. in meters
-GRAPHICS_PITCH_ROTATION=-0.5				; changes 3D object rotation in pitch
-TOTALMASS=1202
-INERTIA=1.60,1.20,4.60				; car polar inertia. Calculated from the car dimensions. Just enter the generic width,height,
+GRAPHICS_OFFSET=0,-0.475,-0.045		; 3D model position offset relative to car's center of gravity (x,y,z) in meters
+GRAPHICS_PITCH_ROTATION=-0.5		; Visual pitch rotation of 3D model (degrees) - does not affect physics
+TOTALMASS=1202						; Total vehicle mass in kilograms - includes fuel, driver, all components
+INERTIA=1.60,1.20,4.60				; Rotational inertia dimensions (width, height, length) in meters - used to calculate moment of inertia about each axis
 
 [GRAPHICS]
-DRIVEREYES=0.359116,1.07184,-0.407793
-ONBOARD_EXPOSURE=19
-OUTBOARD_EXPOSURE=31
-ON_BOARD_PITCH_ANGLE=-3.040853
-BONNET_CAMERA_POS=0,0.71,0.4
-BUMPER_CAMERA_POS=0,0.71,1.74
-MIRROR_POSITION=0.0,1.04,-2.0; Position used to render the mirror
-VIRTUAL_MIRROR_ENABLED=0
-USE_ANIMATED_SUSPENSIONS=0
-SHAKE_MUL=3
-FUEL_LIGHT_MIN_LITERS=7
+DRIVEREYES=0.359116,1.07184,-0.407793	; Driver's eye position (x,y,z) in meters - defines cockpit camera position
+ONBOARD_EXPOSURE=19						; Camera exposure setting for cockpit view (lower = darker)
+OUTBOARD_EXPOSURE=31					; Camera exposure setting for external views (lower = darker)
+ON_BOARD_PITCH_ANGLE=-3.040853			; Default pitch angle for cockpit camera in degrees
+BONNET_CAMERA_POS=0,0.71,0.4			; Hood/bonnet camera position (x,y,z) in meters
+BUMPER_CAMERA_POS=0,0.71,1.74			; Bumper camera position (x,y,z) in meters
+MIRROR_POSITION=0.0,1.04,-2.0			; Virtual mirror position (x,y,z) - used for rendering mirrors
+VIRTUAL_MIRROR_ENABLED=0				; Enable/disable virtual mirror (0=off, 1=on)
+USE_ANIMATED_SUSPENSIONS=0				; Enable/disable animated suspension visualization (0=off, 1=on)
+SHAKE_MUL=3								; Camera shake multiplier - affects how much camera shakes with car movement
+FUEL_LIGHT_MIN_LITERS=7					; Fuel level (liters) at which fuel warning light activates
 
 [CONTROLS]
-FFMULT=2.970
-STEER_ASSIST=1.000
-STEER_LOCK=450					; Real car's steer lock from center to right
-STEER_RATIO=-13.0					; Steer ratio
-LINEAR_STEER_ROD_RATIO=0.0024
+FFMULT=2.970						; Force feedback multiplier - adjusts strength of FFB effects
+STEER_ASSIST=1.000					; Steering assist multiplier - affects steering feel (1.0 = no assist)
+STEER_LOCK=450						; Maximum steering wheel rotation from center to lock (degrees) - should match real car
+STEER_RATIO=-13.0					; Steering ratio - ratio of steering wheel rotation to front wheel angle (negative for proper direction)
+LINEAR_STEER_ROD_RATIO=0.0024		; Linear steering rod ratio - affects steering feel but not actual ratio
 
 [FUEL]
-CONSUMPTION=0.0027				; fuel consumption. In one second the consumption is (rpm*gas*CONSUMPTION)/1000 litres
-FUEL=10							; default starting fuel in litres
-MAX_FUEL=50					; max fuel in litres
+CONSUMPTION=0.0027					; Fuel consumption formula: (rpm * throttle * CONSUMPTION) / 1000 = liters per second
+FUEL=10								; Default starting fuel amount in liters
+MAX_FUEL=50							; Maximum fuel tank capacity in liters
 
 [FUELTANK]
-POSITION=0,-0.10,-1.45
+POSITION=0,-0.10,-1.45				; Fuel tank center position (x,y,z) in meters relative to car CG - affects weight distribution
 
 [RIDE]
-PICKUP_FRONT_HEIGHT=-0.285			; Height of the front ride height pickup point in meters WRT cg
-PICKUP_REAR_HEIGHT=-0.285
+PICKUP_FRONT_HEIGHT=-0.285			; Front ride height measurement point vertical offset from CG in meters
+PICKUP_REAR_HEIGHT=-0.285			; Rear ride height measurement point vertical offset from CG in meters
 
 [PIT_STOP]
-TYRE_CHANGE_TIME_SEC=10            ; time spent to change each tyre
-FUEL_LITER_TIME_SEC=0.6   ; time spent to put 1 lt of fuel inside the car
-BODY_REPAIR_TIME_SEC=20    ; time spent to repair 10% of body damage
-ENGINE_REPAIR_TIME_SEC=2  ; time spent to repair 10% of engine damage
-SUSP_REPAIR_TIME_SEC=30   ; time spent to repair 10% of suspension damage
+TYRE_CHANGE_TIME_SEC=10				; Time in seconds to change each tire during pit stop
+FUEL_LITER_TIME_SEC=0.6				; Time in seconds to refuel 1 liter during pit stop
+BODY_REPAIR_TIME_SEC=20				; Time in seconds to repair 10% of body damage during pit stop
+ENGINE_REPAIR_TIME_SEC=2			; Time in seconds to repair 10% of engine damage during pit stop
+SUSP_REPAIR_TIME_SEC=30				; Time in seconds to repair 10% of suspension damage during pit stop
