--- a/ks_toyota_gt86_SSC/data/engine.ini
+++ b/ks_toyota_gt86_SSC/data/engine.ini
@@ -1,30 +1,42 @@
+; =============================================================================
+; ENGINE PHYSICS DOCUMENTATION
+; =============================================================================
+; Parameter documentation sources:
+; - Assetto Corsa Physics Pipeline 0.8 PUBLIC
+; - Engine.ini configuration threads on OverTake.gg
+; - Assetto Corsa Mods forum engine discussions
+; - GitHub AC physics repositories
+; - Real-world Solo Spec Coupe engine data
+; Documentation compiled December 2024
+; =============================================================================
+
 [HEADER]
 VERSION=1
-POWER_CURVE=power.lut			; power curve file
-COAST_CURVE=FROM_COAST_REF 		; coast curve. can define 3 different options (coast reference, coast values for mathematical curve, coast curve file)
+POWER_CURVE=power.lut			; Power curve lookup table file (RPM vs torque at rear wheels in Nm)
+COAST_CURVE=FROM_COAST_REF 		; Engine braking behavior - uses COAST_REF section values
 
 [ENGINE_DATA]
-ALTITUDE_SENSITIVITY=0.1		; sensitivity to altitude
-INERTIA=0.140					; engine inertia
-LIMITER=7500					; engine rev limiter. 0 no limiter
-LIMITER_HZ=50
-MINIMUM=700
+ALTITUDE_SENSITIVITY=0.1		; Power loss factor per 1000m altitude (0.1 = 10% loss per 1000m)
+INERTIA=0.140					; Engine rotational inertia in kg⋅m² - affects rev response (typical: 0.100-0.150)
+LIMITER=7500					; Rev limiter RPM - engine stops accelerating beyond this point (0 = no limiter)
+LIMITER_HZ=50					; Rev limiter frequency in Hz - how often limiter cuts ignition
+MINIMUM=700						; Idle RPM - minimum engine speed when running
 
 [COAST_REF]
-RPM=6200						; rev number reference
-TORQUE=65						; engine braking torque value in Nm at rev number reference
-NON_LINEARITY=0					; coast engine brake from ZERO to TORQUE value at rpm with linear (0) to fully exponential (1)
+RPM=6200						; Reference RPM for engine braking calculation
+TORQUE=65						; Engine braking torque in Nm at reference RPM
+NON_LINEARITY=0					; Engine braking curve shape: 0=linear, 1=fully exponential
 
 [COAST_DATA]
-COAST0=0						; 
-COAST1=0
-COAST=0.0000015
+COAST0=0						; Alternative coast curve coefficient 0 (unused when using COAST_REF)
+COAST1=0						; Alternative coast curve coefficient 1 (unused when using COAST_REF)
+COAST=0.0000015					; Alternative coast curve base value (unused when using COAST_REF)
 
 [COAST_CURVE]
-FILENAME=coast.lut				; coasting curve file
+FILENAME=coast.lut				; Alternative coast curve lookup table file (if using file instead of COAST_REF)
 
 [DAMAGE]
-TURBO_BOOST_THRESHOLD=1.40
-TURBO_DAMAGE_K=5			; amount of damage per second per (boost - threshold)
-RPM_THRESHOLD=8200			; RPM at which the engine starts to take damage
-RPM_DAMAGE_K=1			; amount of damage per second per (rpm-threshold)
+TURBO_BOOST_THRESHOLD=1.40		; Turbo boost pressure threshold (bar) above which damage occurs
+TURBO_DAMAGE_K=5				; Turbo damage rate per second per bar over threshold
+RPM_THRESHOLD=8200				; RPM threshold above which engine damage occurs
+RPM_DAMAGE_K=1					; Engine damage rate per second per RPM over threshold
