--- a/ks_toyota_gt86_SSC/data/suspensions.ini
+++ b/ks_toyota_gt86_SSC/data/suspensions.ini
@@ -1,9 +1,22 @@
+; =============================================================================
+; SUSPENSION PHYSICS DOCUMENTATION
+; =============================================================================
+; Parameter documentation sources:
+; - Assetto Corsa Physics Pipeline documentation
+; - OverTake.gg suspension setup and physics threads
+; - Assetto Corsa Mods suspension debugging discussions
+; - Assetto Corsa Modding Manual translations
+; - Real-world Solo Spec Coupe suspension data and measurements
+; - Eibach anti-roll bar specifications
+; Documentation compiled December 2024
+; =============================================================================
+
 [HEADER]
 VERSION=1
 
 [BASIC]
-WHEELBASE=2.570						; Wheelbase distance in meters
-CG_LOCATION=0.575						; Front Weight distribution in percentance
+WHEELBASE=2.570						; Wheelbase distance in meters (front axle to rear axle)
+CG_LOCATION=0.575					; Center of gravity position as ratio from rear axle (0.5=center, higher=more forward)
 
 [ARB]
 ; https://eibach.com/us/c-240-product-releases-2013-scion-fr-s-and-subaru-brz-anti-roll-kit.html
@@ -15,21 +28,21 @@ CG_LOCATION=0.575						; Front Weight distribution in percentance
 ;REAR=40000      ; Eibach hard
 
 ; New sway bar calculation - I think the stock front sway bar stiffness is wrong in game
-FRONT=86000 ; Eibach hard - Stock * 3.48 - 86 N/mm 
-;Front=66000 ; Eibach soft - Stock * 2.67 - 66 N/mm
+FRONT=86000 						; Front anti-roll bar wheel rate in N/m (Eibach hard - 86 N/mm)
+;Front=66000 						; Eibach soft option - 66 N/mm
 
-REAR=50000 ; Eibach hard - Stock * 2.53 -   50 N/mm
-;REAR=38000 ; Eibach soft - Stock * 1.92 - 38 N/mm
+REAR=50000 							; Rear anti-roll bar wheel rate in N/m (Eibach hard - 50 N/mm)
+;REAR=38000 						; Eibach soft option - 38 N/mm
 
 
 [FRONT]
-TYPE=STRUT
-BASEY=-0.11								; Distance of CG from the center of the wheel in meters. Front Wheel Radius+BASEY=front CoG. Actual CG height =(FWR+FBasey)+(RWR+Rbasey))/CG_LOCATION%
-;TRACK=1.520									; Track width in meters (from pivot 3D placement of the 3d model of a wheel)
+TYPE=STRUT							; Suspension type: STRUT (MacPherson strut)
+BASEY=-0.11								; Vertical offset from wheel center to CG in meters (wheel radius + BASEY = CG height contribution)
+;TRACK=1.520							; Track width in meters (distance between left and right wheels)
 TRACK=1.536                             
-;ROD_LENGTH=0.155						; push rod length in meters. positive raises ride height, negative lowers ride height.
-ROD_LENGTH=0.125                        ; stock - 0.155, 190mm;    ssc - 0.125, 165mm
-HUB_MASS=40								; masse sospese anteriori
+;ROD_LENGTH=0.155						; Push/pull rod length in meters (positive=higher ride height, negative=lower)
+ROD_LENGTH=0.125                        ; SSC lowered setting: 165mm (stock: 190mm)
+HUB_MASS=40								; Unsprung mass in kg (wheel, tire, brake, hub, portion of suspension)
 STRUT_CAR=0.2459, 0.4512, -0.0498
 STRUT_TYRE=0.0881, -0.1182, 0.0093
 WBCAR_BOTTOM_FRONT=0.3722, -0.0995, 0.308
@@ -37,28 +50,28 @@ WBCAR_BOTTOM_REAR=0.4038, -0.1045, -0.0424
 WBTYRE_BOTTOM=0.0881, -0.1182, 0.0093
 WBCAR_STEER=0.5833, -0.0917, -0.1417
 WBTYRE_STEER=0.1088, -0.1182, -0.1304
-TOE_OUT=-0.00077							; Toe-out expressed as the length of the steering arm in meters
-STATIC_CAMBER=-4.4						; Static Camber in degrees. Actual camber relative to suspension geometry and movement, check values in game
-SPRING_RATE=36000						; Wheel rate stifness in Nm. Do not use spring value but calculate wheel rate
-PROGRESSIVE_SPRING_RATE=0				; progressive spring rate in N/m/
-BUMP_STOP_RATE=50000						; bump stop spring rate
-BUMPSTOP_UP=0.100						; meters to upper bumpstop from the 0 design of the suspension
-BUMPSTOP_DN=0.065						; meters to bottom bumpstop from the 0 design of the suspension
-PACKER_RANGE=0.195						; Total suspension movement range, before hitting packers
-DAMP_BUMP=2250							; Damper wheel rate stifness in N sec/m in compression
-DAMP_FAST_BUMP=1050
-DAMP_FAST_BUMPTHRESHOLD=0.100
-DAMP_REBOUND=10850                       ;1550 === 4 clicks	; Damper wheel rate stiffness in N sec/m in rebound
-DAMP_FAST_REBOUND=6125                 ; 875 === 4 clicks
-DAMP_FAST_REBOUNDTHRESHOLD=0.100
+TOE_OUT=-0.00077						; Toe angle in radians (negative=toe-in, positive=toe-out)
+STATIC_CAMBER=-4.4						; Static camber angle in degrees (negative=top of tire tilted inward)
+SPRING_RATE=36000						; Spring wheel rate in N/m (motion ratio squared × spring rate = wheel rate)
+PROGRESSIVE_SPRING_RATE=0				; Progressive spring rate increase in N/m (0=linear spring)
+BUMP_STOP_RATE=50000					; Bump stop spring rate in N/m (when suspension bottoms out)
+BUMPSTOP_UP=0.100						; Distance to upper bump stop from suspension zero position in meters
+BUMPSTOP_DN=0.065						; Distance to lower bump stop from suspension zero position in meters
+PACKER_RANGE=0.195						; Total suspension travel range in meters before hitting bump stops
+DAMP_BUMP=2250							; Slow-speed compression damping wheel rate in N⋅sec/m
+DAMP_FAST_BUMP=1050						; High-speed compression damping wheel rate in N⋅sec/m
+DAMP_FAST_BUMPTHRESHOLD=0.100			; Velocity threshold in m/s for transition to high-speed compression damping
+DAMP_REBOUND=10850                      ; Slow-speed rebound damping wheel rate in N⋅sec/m
+DAMP_FAST_REBOUND=6125                  ; High-speed rebound damping wheel rate in N⋅sec/m
+DAMP_FAST_REBOUNDTHRESHOLD=0.100		; Velocity threshold in m/s for transition to high-speed rebound damping
 
 [REAR]
-TYPE=DWB
-BASEY=-0.11									; Distance of CG from the center of the wheel in meters. Rear Wheel Radius+BASEY=Rear CoG  Actual CG height =(FWR+FBasey)+(RWR+Rbasey))/CG_LOCATION%
-TRACK=1.540
+TYPE=DWB								; Suspension type: DWB (Double Wishbone)
+BASEY=-0.11								; Vertical offset from wheel center to CG in meters (wheel radius + BASEY = CG height contribution)
+TRACK=1.540								; Track width in meters (distance between left and right wheels)
 ;ROD_LENGTH=0.155					    
-ROD_LENGTH=0.111                        ; stock - 0.155, 190mm;    ssc - 0.111, 165mm
-HUB_MASS=45
+ROD_LENGTH=0.111                        ; SSC lowered setting: 165mm (stock: 190mm)
+HUB_MASS=45								; Unsprung mass in kg (wheel, tire, brake, hub, portion of suspension)
 WBCAR_TOP_FRONT=0.4491, 0.0784, 0.1065
 WBCAR_TOP_REAR=0.497, 0.0767, -0.0601
 WBCAR_BOTTOM_FRONT=0.2861, -0.093, 0.2345
