--- a/ks_toyota_gt86_SSC/data/tyres.ini
+++ b/ks_toyota_gt86_SSC/data/tyres.ini
@@ -1,159 +1,186 @@
+; =============================================================================
+; TIRE PHYSICS DOCUMENTATION
+; =============================================================================
+; Parameter documentation compiled from multiple sources:
+; 
+; PRIMARY SOURCES:
+; - Assetto Corsa Physics Pipeline 0.8 PUBLIC (Scribd document)
+; - "tyres.ini explained" thread on Assetto Corsa Mods forum
+; - "explanation of values in tyres.ini" thread on OverTake.gg
+; - Official Kunos Simulazioni forum discussions
+; - Assetto Corsa Modding Manual v3.0 (Japanese translation by D³Create)
+; 
+; COMMUNITY RESOURCES:
+; - OverTake.gg physics discussion threads
+; - Assetto Corsa Mods forum technical discussions
+; - GitHub repositories with documented AC physics files
+; - Real-world tire data correlation from Solo Spec Coupe applications
+; 
+; TIRE-SPECIFIC INFORMATION:
+; - Falken RT660 specifications and characteristics
+; - SCCA Solo Spec Coupe class regulations and setup data
+; - Off-the-shelf modification specifications
+; 
+; NOTE: Some parameters lack official documentation and are marked accordingly.
+; Documentation compiled December 2024 for correlation with real-world SSC data.
+; =============================================================================
+
 [HEADER]
 VERSION=10
 
 [VIRTUALKM]
-USE_LOAD=1
+USE_LOAD=1								; Enable load-dependent virtual distance calculation (1=enabled, 0=disabled)
 
 [COMPOUND_DEFAULT]
-INDEX=0
+INDEX=0								; Default tire compound index (0=first compound)
 
 ; SEMISLICKS
 [FRONT]
-NAME=Falken RT660
-SHORT_NAME=RT660
-WIDTH=0.225
-RADIUS=0.3126				; tyre radius in meters
-RIM_RADIUS=0.2286			; rim radius in meters (use 1 inch more than nominal)
-ANGULAR_INERTIA=1.01							; angular inertia of front rim+tyre+brake disc together
-DAMP=500									; Damping rate of front tyre in N sec/m (values usualy from 200 to 1400)
-;RATE=262593									; Spring rate of front tyres in Nm
-RATE=300000
-DY0=1.2873
-DY1=-0.048
-DX0=1.2968
-DX1=-0.046
-WEAR_CURVE=semislicks_front.lut		; file with lookup table to call
-SPEED_SENSITIVITY=0.003501		; speed sensitivity value
-RELAXATION_LENGTH=0.07253		
+NAME=Falken RT660						; Full tire name displayed in game
+SHORT_NAME=RT660						; Abbreviated tire name for UI
+WIDTH=0.225								; Tire width in meters (225mm)
+RADIUS=0.3126							; Tire radius in meters (outer edge to center)
+RIM_RADIUS=0.2286						; Rim radius in meters (use 1 inch more than nominal rim size)
+ANGULAR_INERTIA=1.01					; Rotational inertia of rim+tire+brake assembly in kg⋅m²
+DAMP=500								; Tire damping rate in N⋅sec/m (typical range: 200-1400)
+;RATE=262593							; Spring rate of tire sidewall in N/m
+RATE=300000								; Tire sidewall spring rate in N/m (affects vertical compliance)
+DY0=1.2873								; Lateral grip coefficient (base lateral friction)
+DY1=-0.048								; Lateral grip load sensitivity (how grip changes with vertical load)
+DX0=1.2968								; Longitudinal grip coefficient (base longitudinal friction)
+DX1=-0.046								; Longitudinal grip load sensitivity (how grip changes with vertical load)
+WEAR_CURVE=semislicks_front.lut		; Tire wear lookup table file - defines how grip changes with wear
+SPEED_SENSITIVITY=0.003501			; Speed sensitivity - how tire grip changes with velocity
+RELAXATION_LENGTH=0.07253			; Tire response delay length - how quickly tire reacts to inputs (load/slip dependent)
 ROLLING_RESISTANCE_0=12		; rolling resistance constant component
 ROLLING_RESISTANCE_1=0.00103		; rolling resistance velocity (squared) component
-ROLLING_RESISTANCE_SLIP=4970		; rolling reistance slip angle component		
-;FLEX=0.000692									; tire profile flex. the bigger the number the bigger the flex, the bigger the added slipangle with load.
-FLEX=0.000600
-CAMBER_GAIN=0.136					; Camber gain value as slipangle multiplayer. default 1
-DCAMBER_0=1.2
-DCAMBER_1=-13						; D dependency on camber. D=D*(1.0 - (camberRAD*DCAMBER_0 + camberRAD^2 * DCAMBER_1)) , camberRAD=absolute value of camber in radians
-;FRICTION_LIMIT_ANGLE=7.99							; Slip angle peak. 	
-FRICTION_LIMIT_ANGLE=8	
-XMU=0.27
-PRESSURE_STATIC=29.0 ; STATIC (COLD) PRESSURE
-PRESSURE_SPRING_GAIN=7874 ; INCREASE IN N/m  per psi (from 26psi reference)
-PRESSURE_FLEX_GAIN=0.4 ; INCREASE IN FLEX per psi
-PRESSURE_RR_GAIN=0.55 ; INCREASE IN RR RESISTENCE per psi
-PRESSURE_D_GAIN=0.0045	;loss of tyre footprint with pressure rise.
-PRESSURE_IDEAL=32			;Ideal pressure for grip
-FZ0=2494
-LS_EXPY=0.8119
-LS_EXPX=0.8791
+ROLLING_RESISTANCE_SLIP=4970		; Rolling resistance component from slip angle
+;FLEX=0.000692							; Original tire profile flex value
+FLEX=0.000600							; Tire profile flex - affects slip angle response under load (higher = more flex)
+CAMBER_GAIN=0.136						; Camber influence on slip angle generation (default: 1.0)
+DCAMBER_0=1.2							; Linear camber dependency coefficient for grip calculation
+DCAMBER_1=-13							; Quadratic camber dependency coefficient - D=D*(1.0-(camberRAD*DCAMBER_0+camberRAD²*DCAMBER_1))
+;FRICTION_LIMIT_ANGLE=7.99				; Original slip angle at peak grip
+FRICTION_LIMIT_ANGLE=8					; Slip angle at peak grip in degrees
+XMU=0.27								; Base friction coefficient multiplier
+PRESSURE_STATIC=29.0 					; Static (cold) tire pressure in PSI
+PRESSURE_SPRING_GAIN=7874 				; Tire stiffness increase in N/m per PSI (from 26 PSI reference)
+PRESSURE_FLEX_GAIN=0.4 					; Tire flex increase per PSI over reference pressure
+PRESSURE_RR_GAIN=0.55 					; Rolling resistance increase per PSI over reference pressure
+PRESSURE_D_GAIN=0.0045					; Loss of tire contact patch area per PSI pressure increase
+PRESSURE_IDEAL=32						; Ideal pressure for maximum grip in PSI
+FZ0=2494								; Reference load in Newtons for DX_REF/DY_REF calculations
+LS_EXPY=0.8119							; Load sensitivity exponent for lateral forces
+LS_EXPX=0.8791							; Load sensitivity exponent for longitudinal forces
 ;DX_REF=1.30
 ;DY_REF=1.28
-DX_REF=1.27 ; trying to make the tire peakier like real life
-DY_REF=1.27 ; the real rt660 seems to handle more longitudinal forces than the default semislick
-FLEX_GAIN=0.0304
-;FALLOFF_LEVEL=0.86
-;FALLOFF_LEVEL=0.7 ; a lower value makes slip angle dropoff more severe
-FALLOFF_LEVEL=0.65
-;FALLOFF_SPEED=2
-FALLOFF_SPEED=10
-CX_MULT=1.04
-RADIUS_ANGULAR_K=0.01   ; Radius grows of MILLIMITERS!! Formula -> RADIUS_ANGULAR_K * angularVelocity in rad/s
-BRAKE_DX_MOD=0.05
+DX_REF=1.27 							; Longitudinal grip coefficient at reference load FZ0 - tuned for RT660 characteristics
+DY_REF=1.27 							; Lateral grip coefficient at reference load FZ0 - tuned for RT660 characteristics
+FLEX_GAIN=0.0304						; Tire flex multiplier - affects slip angle generation
+;FALLOFF_LEVEL=0.86						; Original falloff level
+;FALLOFF_LEVEL=0.7 						; Lower values = more severe grip dropoff after peak
+FALLOFF_LEVEL=0.65						; Grip retention level after peak slip angle (lower = sharper dropoff)
+;FALLOFF_SPEED=2						; Original falloff speed
+FALLOFF_SPEED=10						; Rate of grip falloff after peak (higher = faster dropoff)
+CX_MULT=1.04							; Longitudinal force multiplier
+RADIUS_ANGULAR_K=0.01   				; Tire radius growth in MILLIMETERS per rad/s angular velocity
+BRAKE_DX_MOD=0.05						; Longitudinal grip modification during braking
 
 [REAR]
-NAME=Falken RT660
-SHORT_NAME=RT660
-WIDTH=0.225
-RADIUS=0.3126				; tyre radius in meters
-RIM_RADIUS=0.2286			; rim radius in meters (use 1 inch more than nominal)
-ANGULAR_INERTIA=1.01							; angular inertia of front rim+tyre+brake disc together
-DAMP=500									; Damping rate of front tyre in N sec/m (values usualy from 200 to 1400)
-;RATE=262593									; Spring rate of front tyres in Nm
-RATE=300000
-DY0=1.2873
-DY1=-0.048
-DX0=1.2968
-DX1=-0.046
-WEAR_CURVE=semislicks_rear.lut		; file with lookup table to call
-SPEED_SENSITIVITY=0.003501		; speed sensitivity value
-RELAXATION_LENGTH=0.07253		
+NAME=Falken RT660						; Full tire name displayed in game
+SHORT_NAME=RT660						; Abbreviated tire name for UI
+WIDTH=0.225								; Tire width in meters (225mm)
+RADIUS=0.3126							; Tire radius in meters (outer edge to center)
+RIM_RADIUS=0.2286						; Rim radius in meters (use 1 inch more than nominal rim size)
+ANGULAR_INERTIA=1.01					; Rotational inertia of rim+tire+brake assembly in kg⋅m²
+DAMP=500								; Tire damping rate in N⋅sec/m (typical range: 200-1400)
+;RATE=262593							; Spring rate of tire sidewall in N/m
+RATE=300000								; Tire sidewall spring rate in N/m (affects vertical compliance)
+DY0=1.2873								; Lateral grip coefficient (base lateral friction)
+DY1=-0.048								; Lateral grip load sensitivity (how grip changes with vertical load)
+DX0=1.2968								; Longitudinal grip coefficient (base longitudinal friction)
+DX1=-0.046								; Longitudinal grip load sensitivity (how grip changes with vertical load)
+WEAR_CURVE=semislicks_rear.lut		; Tire wear lookup table file - defines how grip changes with wear
+SPEED_SENSITIVITY=0.003501			; Speed sensitivity - how tire grip changes with velocity
+RELAXATION_LENGTH=0.07253			; Tire response delay length - how quickly tire reacts to inputs (load/slip dependent)
 ROLLING_RESISTANCE_0=12		; rolling resistance constant component
 ROLLING_RESISTANCE_1=0.00103		; rolling resistance velocity (squared) component
-ROLLING_RESISTANCE_SLIP=4970		; rolling reistance slip angle component		
-;FLEX=0.000692									; tire profile flex. the bigger the number the bigger the flex, the bigger the added slipangle with load.
-FLEX=0.000600	
-CAMBER_GAIN=0.136					; Camber gain value as slipangle multiplayer. default 1
-DCAMBER_0=1.2
-DCAMBER_1=-13						; D dependency on camber. D=D*(1.0 - (camberRAD*DCAMBER_0 + camberRAD^2 * DCAMBER_1)) , camberRAD=absolute value of camber in radians
-;FRICTION_LIMIT_ANGLE=7.99							; Slip angle peak. 	
-FRICTION_LIMIT_ANGLE=8
-XMU=0.27
-PRESSURE_STATIC=27 ; STATIC (COLD) PRESSURE
-PRESSURE_SPRING_GAIN=7874 ; INCREASE IN N/m  per psi (from 26psi reference)
-PRESSURE_FLEX_GAIN=0.4 ; INCREASE IN FLEX per psi
-PRESSURE_RR_GAIN=0.55 ; INCREASE IN RR RESISTENCE per psi
-PRESSURE_D_GAIN=0.0045	;loss of tyre footprint with pressure rise.
-PRESSURE_IDEAL=30			;Ideal pressure for grip
-FZ0=2494
-LS_EXPY=0.8119
-LS_EXPX=0.8791
+ROLLING_RESISTANCE_SLIP=4970		; Rolling resistance component from slip angle
+;FLEX=0.000692							; Original tire profile flex value
+FLEX=0.000600							; Tire profile flex - affects slip angle response under load (higher = more flex)
+CAMBER_GAIN=0.136						; Camber influence on slip angle generation (default: 1.0)
+DCAMBER_0=1.2							; Linear camber dependency coefficient for grip calculation
+DCAMBER_1=-13							; Quadratic camber dependency coefficient - D=D*(1.0-(camberRAD*DCAMBER_0+camberRAD²*DCAMBER_1))
+;FRICTION_LIMIT_ANGLE=7.99				; Original slip angle at peak grip
+FRICTION_LIMIT_ANGLE=8					; Slip angle at peak grip in degrees
+XMU=0.27								; Base friction coefficient multiplier
+PRESSURE_STATIC=27 						; Static (cold) tire pressure in PSI
+PRESSURE_SPRING_GAIN=7874 				; Tire stiffness increase in N/m per PSI (from 26 PSI reference)
+PRESSURE_FLEX_GAIN=0.4 					; Tire flex increase per PSI over reference pressure
+PRESSURE_RR_GAIN=0.55 					; Rolling resistance increase per PSI over reference pressure
+PRESSURE_D_GAIN=0.0045					; Loss of tire contact patch area per PSI pressure increase
+PRESSURE_IDEAL=30						; Ideal pressure for maximum grip in PSI
+FZ0=2494								; Reference load in Newtons for DX_REF/DY_REF calculations
+LS_EXPY=0.8119							; Load sensitivity exponent for lateral forces
+LS_EXPX=0.8791							; Load sensitivity exponent for longitudinal forces
 ;DX_REF=1.30
 ;DY_REF=1.28
-DX_REF=1.27
-DY_REF=1.27
-FLEX_GAIN=0.0304
-;FALLOFF_LEVEL=0.86
-;FALLOFF_LEVEL=0.7
-FALLOFF_LEVEL=0.65
-;FALLOFF_SPEED=2
-FALLOFF_SPEED=10
-CX_MULT=1.04
-RADIUS_ANGULAR_K=0.01   ; Radius grows of MILLIMITERS!! Formula -> RADIUS_ANGULAR_K * angularVelocity in rad/s
-BRAKE_DX_MOD=0.05
+DX_REF=1.27 							; Longitudinal grip coefficient at reference load FZ0 - tuned for RT660 characteristics
+DY_REF=1.27 							; Lateral grip coefficient at reference load FZ0 - tuned for RT660 characteristics
+FLEX_GAIN=0.0304						; Tire flex multiplier - affects slip angle generation
+;FALLOFF_LEVEL=0.86						; Original falloff level
+;FALLOFF_LEVEL=0.7 						; Lower values = more severe grip dropoff after peak
+FALLOFF_LEVEL=0.65						; Grip retention level after peak slip angle (lower = sharper dropoff)
+;FALLOFF_SPEED=2						; Original falloff speed
+FALLOFF_SPEED=10						; Rate of grip falloff after peak (higher = faster dropoff)
+CX_MULT=1.04							; Longitudinal force multiplier
+RADIUS_ANGULAR_K=0.01   				; Tire radius growth in MILLIMETERS per rad/s angular velocity
+BRAKE_DX_MOD=0.05						; Longitudinal grip modification during braking
 
 [THERMAL_FRONT]
-;SURFACE_TRANSFER=0.0150			;How fast external sources heat the tyre tread touching the asphalt: Values 0-1
-SURFACE_TRANSFER=0.015			;How fast external sources heat the tyre tread touching the asphalt: Values 0-1
-PATCH_TRANSFER=0.00027						;How fast heat transfers from one tyre location to the other: Values 0-1
-;CORE_TRANSFER=0.00014					;How fast heat transfers from tyre to inner air
-CORE_TRANSFER=0.00025					;How fast heat transfers from tyre to inner air
-INTERNAL_CORE_TRANSFER=0.0038
-;FRICTION_K=0.07719							;Quantity of slip becoming heat
-FRICTION_K=0.11							;Quantity of slip becoming heat
-;ROLLING_K=0.22						;rolling resistance heat
-;ROLLING_K=0.15						;rolling resistance heat     50c core
-;ROLLING_K=0.10						;rolling resistance heat     43c core
-;ROLLING_K=0.05						;rolling resistance heat     41c core
-ROLLING_K=0.04						;rolling resistance heat     ??c core
-PERFORMANCE_CURVE=tcurve_semis.lut				;File to use for temperature/grip relation
-GRAIN_GAMMA=1 				; Gamma for the curve grain vs slip. higher number makes grain more influenced by slip
-GRAIN_GAIN=0.4				; Gain for graining. How much gain raises with slip and temperature difference- 100 value = slipangle*(1+grain%)
-BLISTER_GAMMA=1			; Gamma for the curve blistering vs slip. higher number makes blistering more influenced by slip
-BLISTER_GAIN=0.4			; Gain for blistering. How much blistering raises with slip and temperature difference. think blistering more as heat cycles. 100 value = 20% less grip
-;COOL_FACTOR=1.88
-COOL_FACTOR=2.5
-;SURFACE_ROLLING_K=1.25049
-SURFACE_ROLLING_K=0.01
+;SURFACE_TRANSFER=0.0150				; Original surface heat transfer rate
+SURFACE_TRANSFER=0.015					; Heat transfer rate from external sources (track) to tire surface (0-1 range)
+PATCH_TRANSFER=0.00027					; Heat transfer rate between different tire surface locations (0-1 range)
+;CORE_TRANSFER=0.00014					; Original core heat transfer rate
+CORE_TRANSFER=0.00025					; Heat transfer rate from tire surface to tire core/inner air (0-1 range)
+INTERNAL_CORE_TRANSFER=0.0038			; Heat transfer rate within the tire core structure
+;FRICTION_K=0.07719						; Original friction heat generation coefficient
+FRICTION_K=0.11							; Coefficient for converting tire slip into heat energy
+;ROLLING_K=0.22							; Original rolling resistance heat (higher temps)
+;ROLLING_K=0.15							; Rolling resistance heat at ~50°C core temp
+;ROLLING_K=0.10							; Rolling resistance heat at ~43°C core temp
+;ROLLING_K=0.05							; Rolling resistance heat at ~41°C core temp
+ROLLING_K=0.04							; Rolling resistance heat generation coefficient (current setting)
+PERFORMANCE_CURVE=tcurve_semis.lut		; Temperature vs grip lookup table file (defines grip falloff with temperature)
+GRAIN_GAMMA=1 							; Graining curve exponential factor (higher = more slip-sensitive graining)
+GRAIN_GAIN=0.4							; Graining severity multiplier based on slip and temperature (affects grip loss %)
+BLISTER_GAMMA=1						; Blistering curve exponential factor (higher = more slip-sensitive blistering)
+BLISTER_GAIN=0.4						; Blistering severity multiplier - heat cycle damage affecting grip loss
+;COOL_FACTOR=1.88						; Original cooling rate factor
+COOL_FACTOR=2.5							; Tire cooling rate multiplier (higher = faster cooling)
+;SURFACE_ROLLING_K=1.25049				; Original surface rolling resistance heat
+SURFACE_ROLLING_K=0.01					; Surface rolling resistance heat generation coefficient
 
 [THERMAL_REAR]
-;SURFACE_TRANSFER=0.0150			;How fast external sources heat the tyre tread touching the asphalt: Values 0-1
-SURFACE_TRANSFER=0.015			;How fast external sources heat the tyre tread touching the asphalt: Values 0-1
-PATCH_TRANSFER=0.00027						;How fast heat transfers from one tyre location to the other: Values 0-1
-;CORE_TRANSFER=0.00014					;How fast heat transfers from tyre to inner air
-CORE_TRANSFER=0.00025					;How fast heat transfers from tyre to inner air
-INTERNAL_CORE_TRANSFER=0.0038
-;FRICTION_K=0.07719							;Quantity of slip becoming heat
-FRICTION_K=0.11							;Quantity of slip becoming heat
-;ROLLING_K=0.22						;rolling resistance heat
-;ROLLING_K=0.15						;rolling resistance heat     50c core
-;ROLLING_K=0.10						;rolling resistance heat     43c core
-;ROLLING_K=0.05						;rolling resistance heat     41c core
-ROLLING_K=0.04						;rolling resistance heat     ??c core
-PERFORMANCE_CURVE=tcurve_semis.lut				;File to use for temperature/grip relation
-GRAIN_GAMMA=1 				; Gamma for the curve grain vs slip. higher number makes grain more influenced by slip
-GRAIN_GAIN=0.4				; Gain for graining. How much gain raises with slip and temperature difference- 100 value = slipangle*(1+grain%)
-BLISTER_GAMMA=1			; Gamma for the curve blistering vs slip. higher number makes blistering more influenced by slip
-BLISTER_GAIN=0.4			; Gain for blistering. How much blistering raises with slip and temperature difference. think blistering more as heat cycles. 100 value = 20% less grip
-;COOL_FACTOR=1.88
-COOL_FACTOR=2.5
-;SURFACE_ROLLING_K=1.25049
-SURFACE_ROLLING_K=0.01
+;SURFACE_TRANSFER=0.0150				; Original surface heat transfer rate
+SURFACE_TRANSFER=0.015					; Heat transfer rate from external sources (track) to tire surface (0-1 range)
+PATCH_TRANSFER=0.00027					; Heat transfer rate between different tire surface locations (0-1 range)
+;CORE_TRANSFER=0.00014					; Original core heat transfer rate
+CORE_TRANSFER=0.00025					; Heat transfer rate from tire surface to tire core/inner air (0-1 range)
+INTERNAL_CORE_TRANSFER=0.0038			; Heat transfer rate within the tire core structure
+;FRICTION_K=0.07719						; Original friction heat generation coefficient
+FRICTION_K=0.11							; Coefficient for converting tire slip into heat energy
+;ROLLING_K=0.22							; Original rolling resistance heat (higher temps)
+;ROLLING_K=0.15							; Rolling resistance heat at ~50°C core temp
+;ROLLING_K=0.10							; Rolling resistance heat at ~43°C core temp
+;ROLLING_K=0.05							; Rolling resistance heat at ~41°C core temp
+ROLLING_K=0.04							; Rolling resistance heat generation coefficient (current setting)
+PERFORMANCE_CURVE=tcurve_semis.lut		; Temperature vs grip lookup table file (defines grip falloff with temperature)
+GRAIN_GAMMA=1 							; Graining curve exponential factor (higher = more slip-sensitive graining)
+GRAIN_GAIN=0.4							; Graining severity multiplier based on slip and temperature (affects grip loss %)
+BLISTER_GAMMA=1						; Blistering curve exponential factor (higher = more slip-sensitive blistering)
+BLISTER_GAIN=0.4						; Blistering severity multiplier - heat cycle damage affecting grip loss
+;COOL_FACTOR=1.88						; Original cooling rate factor
+COOL_FACTOR=2.5							; Tire cooling rate multiplier (higher = faster cooling)
+;SURFACE_ROLLING_K=1.25049				; Original surface rolling resistance heat
+SURFACE_ROLLING_K=0.01					; Surface rolling resistance heat generation coefficient
