--- a/ks_toyota_gt86_SSC/data/aero.ini
+++ b/ks_toyota_gt86_SSC/data/aero.ini
@@ -1,26 +1,38 @@
+; =============================================================================
+; AERODYNAMICS PHYSICS DOCUMENTATION
+; =============================================================================
+; Parameter documentation sources:
+; - OverTake.gg aero.ini and wing development threads
+; - "AC Wings dev app" documentation (Cats on Slicks)
+; - Assetto Corsa Mods aerodynamics discussions
+; - GitHub AC physics repositories with aero examples
+; - Real-world Solo Spec Coupe aerodynamic characteristics
+; Documentation compiled December 2024
+; =============================================================================
+
 [HEADER]
 VERSION=2
 
 [WING_0]
-NAME=BODY							; name of the wing
-CHORD=1								; length of the wing in meters
-SPAN=1.96								; width of the wing in meters. both help determine the frontal area
-POSITION=0,0.23,-0.30						; position in x,y,z starting from the CoG
-LUT_AOA_CL=wing_body_AOA_CL.lut		; Coefficient of Lift lookup table
-LUT_GH_CL=							; Height aero lift multiplier lookup table
-CL_GAIN=0							; Coefficient of Lift multiplier 
-LUT_AOA_CD=wing_body_AOA_CD.lut		; Coefficient of drag lookup table
-LUT_GH_CD=							; Height aero drag multiplier table
-CD_GAIN=1							; Coefficient of drag multiplier (for easy fine tuning)
-ANGLE=1
-ZONE_FRONT_CL=0     ; CL=CL/(1.0+ZONE_0_CL*DAMAGE)
-ZONE_FRONT_CD=0.005    ; CD=CD*(1.0+ZONE_0_CD*DAMAGE)
-ZONE_REAR_CL=0     ; CL=CL/(1.0+ZONE_0_CL*DAMAGE)
-ZONE_REAR_CD=0.005     ; CD=CD*(1.0+ZONE_0_CD*DAMAGE)
-ZONE_LEFT_CL=0     ; CL=CL/(1.0+ZONE_0_CL*DAMAGE)
-ZONE_LEFT_CD=0.01     ; CD=CD*(1.0+ZONE_0_CD*DAMAGE)
-ZONE_RIGHT_CL=0     ; CL=CL/(1.0+ZONE_0_CL*DAMAGE)
-ZONE_RIGHT_CD=0.01     ; CD=CD*(1.0+ZONE_0_CD*DAMAGE)
+NAME=BODY							; Wing section name (for identification)
+CHORD=1								; Wing chord length in meters (aerodynamic width)
+SPAN=1.96							; Wing span in meters (aerodynamic length) - Area = CHORD × SPAN
+POSITION=0,0.23,-0.30				; Wing position (x,y,z) in meters relative to car's center of gravity
+LUT_AOA_CL=wing_body_AOA_CL.lut		; Lift coefficient lookup table vs angle of attack (AOA)
+LUT_GH_CL=							; Ground height lift multiplier lookup table (empty = no ground effect)
+CL_GAIN=0							; Lift coefficient multiplier (negative = downforce, positive = lift)
+LUT_AOA_CD=wing_body_AOA_CD.lut		; Drag coefficient lookup table vs angle of attack (AOA)
+LUT_GH_CD=							; Ground height drag multiplier lookup table (empty = no ground effect)
+CD_GAIN=1							; Drag coefficient multiplier (for tuning overall drag)
+ANGLE=1								; Initial wing angle in degrees
+ZONE_FRONT_CL=0     				; Front damage lift coefficient reduction factor
+ZONE_FRONT_CD=0.005    				; Front damage drag coefficient increase factor
+ZONE_REAR_CL=0     					; Rear damage lift coefficient reduction factor
+ZONE_REAR_CD=0.005     				; Rear damage drag coefficient increase factor
+ZONE_LEFT_CL=0     					; Left side damage lift coefficient reduction factor
+ZONE_LEFT_CD=0.01     				; Left side damage drag coefficient increase factor
+ZONE_RIGHT_CL=0     				; Right side damage lift coefficient reduction factor
+ZONE_RIGHT_CD=0.01     				; Right side damage drag coefficient increase factor
 
 [WING_1]
 NAME=FRONT							; name of the wing
