Ideal pressure change

--- a/ks_toyota_gt86_SSC/data/tyres.ini
+++ b/ks_toyota_gt86_SSC/data/tyres.ini
@@ -68,7 +68,7 @@ PRESSURE_SPRING_GAIN=7874 				; Tire stiffness increase in N/m per PSI (from 26 
 PRESSURE_FLEX_GAIN=0.4 					; Tire flex increase per PSI over reference pressure
 PRESSURE_RR_GAIN=0.55 					; Rolling resistance increase per PSI over reference pressure
 PRESSURE_D_GAIN=0.0045					; Loss of tire contact patch area per PSI pressure increase
-PRESSURE_IDEAL=32						; Ideal pressure for maximum grip in PSI
+PRESSURE_IDEAL=31						; Ideal pressure for maximum grip in PSI (SSC real-world optimal)
 FZ0=2494								; Reference load in Newtons for DX_REF/DY_REF calculations
 LS_EXPY=0.8119							; Load sensitivity exponent for lateral forces
 LS_EXPX=0.8791							; Load sensitivity exponent for longitudinal forces
@@ -119,7 +119,7 @@ PRESSURE_SPRING_GAIN=7874 				; Tire stiffness increase in N/m per PSI (from 26 
 PRESSURE_FLEX_GAIN=0.4 					; Tire flex increase per PSI over reference pressure
 PRESSURE_RR_GAIN=0.55 					; Rolling resistance increase per PSI over reference pressure
 PRESSURE_D_GAIN=0.0045					; Loss of tire contact patch area per PSI pressure increase
-PRESSURE_IDEAL=30						; Ideal pressure for maximum grip in PSI
+PRESSURE_IDEAL=29						; Ideal pressure for maximum grip in PSI (SSC real-world optimal)
 FZ0=2494								; Reference load in Newtons for DX_REF/DY_REF calculations
 LS_EXPY=0.8119							; Load sensitivity exponent for lateral forces
 LS_EXPX=0.8791							; Load sensitivity exponent for longitudinal forces
