Tire load parameter change (to better reflect weight distribuition)

--- a/ks_toyota_gt86_SSC/data/tyres.ini
+++ b/ks_toyota_gt86_SSC/data/tyres.ini
@@ -69,7 +69,7 @@ PRESSURE_FLEX_GAIN=0.4 					; Tire flex increase per PSI over reference pressure
 PRESSURE_RR_GAIN=0.55 					; Rolling resistance increase per PSI over reference pressure
 PRESSURE_D_GAIN=0.0045					; Loss of tire contact patch area per PSI pressure increase
 PRESSURE_IDEAL=31						; Ideal pressure for maximum grip in PSI (SSC real-world optimal)
-FZ0=2494								; Reference load in Newtons for DX_REF/DY_REF calculations
+FZ0=3580								; Reference load in Newtons for DX_REF/DY_REF calculations (805 lbs actual front load)
 LS_EXPY=0.8119							; Load sensitivity exponent for lateral forces
 LS_EXPX=0.8791							; Load sensitivity exponent for longitudinal forces
 ;DX_REF=1.30
@@ -120,7 +120,7 @@ PRESSURE_FLEX_GAIN=0.4 					; Tire flex increase per PSI over reference pressure
 PRESSURE_RR_GAIN=0.55 					; Rolling resistance increase per PSI over reference pressure
 PRESSURE_D_GAIN=0.0045					; Loss of tire contact patch area per PSI pressure increase
 PRESSURE_IDEAL=29						; Ideal pressure for maximum grip in PSI (SSC real-world optimal)
-FZ0=2494								; Reference load in Newtons for DX_REF/DY_REF calculations
+FZ0=2650								; Reference load in Newtons for DX_REF/DY_REF calculations (595 lbs actual rear load)
 LS_EXPY=0.8119							; Load sensitivity exponent for lateral forces
 LS_EXPX=0.8791							; Load sensitivity exponent for longitudinal forces
 ;DX_REF=1.30
